# acnh_data

./: .gitignore  Cargo.toml  readme.md
src/: main.rs
src/bcsv/: mod.rs  util.rs  utils.rs
src/binary/: bcsv.rs  mod.rs  msbt.rs  sarc.rs  util.rs
src/codegen/: bcsvgen.rs  enumgen.rs  mod.rs
src/codegeneration/: bcsvgen.rs  mod.rs  msbtgen.rs
src/msbt/: defs.rs  mod.rs
