[package]
name = "acnh_data"
version = "0.1.0"
authors = ["GoogleBen <william.ben.wyatt@gmail.com>"]
edition = "2018"

[features]
default = ["final"]
final = []
codegen = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.14.3"
crc = "1.8.1"
zstd = "0.5"